# monty-near-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yml
examples/: example.py
src/: main.rs
template/: Cargo.toml
template/.cargo/: config.toml
template/src/: lib.rs
tests/: contract.compat.test.ts  contract.test.ts  package.json  sandbox.rs
