[package]
name = "monty-near-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
monty = { git = "https://github.com/pydantic/monty.git", branch = "main" }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff.git", branch = "main" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git", branch = "main" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"

