[package]
name = "monty-near-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
monty = { git = "https://github.com/pydantic/monty.git", branch = "main" }
getrandom = "0.3"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
